fix(Groups): Fix group image size on mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_groupsSemantic.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_groupsSemantic.scss
@@ -47,13 +47,17 @@
         height: 224px;
 
         @media #{$mobile} {
-            height: 154px;
-            width: 334px;
+            height: 100%;
+            width: 100%;
         }
 
         img {
             position: absolute;
             border-radius: 2px;
+            
+            @media #{$mobile} {
+                position: relative;
+            }
         }
     }
 
